--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/busboy": "^1.3.0",
+    "busboy": "^1.4.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -16,8 +18,10 @@
   "devDependencies": {
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "axios": "^0.26.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "mongodb": "^4.4.0",
     "typescript": "4.5.5"
   }
 }
